--- a/build.gradle
+++ b/build.gradle
@@ -22,15 +22,18 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
 
     // Swagger Document
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 
+    // Thymeleaf
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     // Thymeleaf Layout Dialect 추가
     implementation group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '3.2.0'
+
+//    implementation 'org.springframework.boot:spring-boot-starter-mustache'
 
     // Security
 //    implementation 'org.springframework.boot:spring-boot-starter-security'
